added blue, changed green and red thresholds, updated readme, and fixed green